# MoonriseGeneratorAccelerator

./: .gitignore  DENSITY_COMPILER.md  README.md  _m1.md  build.gradle  gradle.properties  settings.gradle
DensityOperation/: CMakeLists.txt  library.cpp  library.h  mingw-toolchain.cmake
DensityOperation/src/: DensityVM.h  NoiseGenerator.cpp  NoiseGenerator.h
DensityOperation/src/structs/: GenerationStructs.h
DensityOperation/src/structs/noise/: Noises.h
common/: Fobos.html  build.gradle
common/src/main/java/dev/sixik/asm/: AsmCtx.java  AsmFunctionsWrapper.java  BasicAsmContext.java  FieldsCache.java  LocalsCache.java  VariableType.java  VariablesManipulator.java
common/src/main/java/dev/sixik/asm/handlers/: AsmCtxArraysHandler.java  AsmCtxCachedVariablesHandler.java  AsmCtxConditionsHandler.java  AsmCtxHandler.java  AsmCtxIterationsHandler.java  AsmCtxMethodsHandler.java  AsmCtxOperationsHandler.java  AsmCtxPrimitiveHandler.java
common/src/main/java/dev/sixik/asm/utils/: DescriptorBuilder.java
common/src/main/java/dev/sixik/density_compiler/: DCAsmContext.java  DensityCompiler.java
common/src/main/java/dev/sixik/density_compiler/data/: ByteCodeGeneratorStructure.java  DensityCompilerData.java  DensityCompilerLocals.java  DensityComplierConfiguration.java
common/src/main/java/dev/sixik/density_compiler/handlers/: DCAsmHandler.java  (+1 more)
common/src/main/java/dev/sixik/density_interpreter/: DensityCompiler.java  DensityOpcode.java  DensityVM.java  NativeUtils.java
common/src/main/java/dev/sixik/moonrisegeneratoraccelerator/: MSAConstants.java  MoonriseGeneratorAccelerator.java
common/src/main/java/dev/sixik/msplit/: SplitMethod.java  Splitter.java  Util.java
common/src/main/resources/: btsengineconcurrent.accesswidener  moonrise_generator_accelerator.mixins.json  moonrise_generator_accelerator_profiler.mixins.json
common/src/test/java/: ASMTest.java  DensityCompilerTest.java  GeneratorTest.java  SomeTest.java  TestCompiler.java
fabric/: build.gradle
fabric/src/main/resources/: fabric.mod.json
neoforge/: build.gradle
(+247 files in other folders)
